objects/Quotation__c.object
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <displayFormat>Quote-{0000}</displayFormat>
        <label>Quotation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <label>Enquiry</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quoted_Amount__c</fullName>
        <label>Quoted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>